--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,16 @@
 {
   "name": "mammooc-rating-widget",
   "description": "",
+  "authors": [
+    "Paul Arndt",
+    "Rosa Braatz",
+    "Philipp Fischbeck",
+    "Dominic Sauer",
+    "Sebastian Serth"
+  ],
   "main": "mammooc-rating-widget.html",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/mammooc/mammooc-rating-widget",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -12,27 +19,27 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
+    "polymer": "Polymer/polymer#^1.7.0",
     "iron-form-element-behavior": "PolymerElements/iron-form-element-behavior#^1.0.6",
-    "iron-form": "PolymerElements/iron-form#^1.0.16",
-    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0",
-    "flexible-rating": "mammooc/flexible-rating#^1.0.1",
-    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "iron-form": "PolymerElements/iron-form#^1.1.4",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
+    "flexible-rating": "mammooc/flexible-rating#^1.0.2",
+    "paper-card": "PolymerElements/paper-card#^1.1.4",
     "paper-styles": "PolymerElements/paper-styles#^1.1.4",
-    "paper-input": "PolymerElements/paper-input#^1.1.11",
-    "paper-button": "PolymerElements/paper-button#^1.0.12",
-    "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.0",
-    "paper-radio-button": "PolymerElements/paper-radio-button#^1.2.0",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.2.0",
+    "paper-input": "PolymerElements/paper-input#^1.1.20",
+    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.1",
+    "paper-radio-button": "PolymerElements/paper-radio-button#^1.2.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.1",
     "iron-jsonp-library": "PolymerElements/iron-jsonp-library#^1.0.4",
-    "paper-toast": "PolymerElements/paper-toast#^1.3.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.3",
-    "iron-scroll-threshold": "PolymerElements/iron-scroll-threshold#^1.0.1",
-    "iron-list": "PolymerElements/iron-list#^1.3.4",
-    "app-localize-behavior": "PolymerElements/app-localize-behavior#^0.9.2"
+    "paper-toast": "PolymerElements/paper-toast#^1.0.3",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.5",
+    "iron-scroll-threshold": "PolymerElements/iron-scroll-threshold#^1.0.3",
+    "iron-list": "PolymerElements/iron-list#^1.3.13",
+    "app-localize-behavior": "PolymerElements/app-localize-behavior#^0.10.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "web-component-tester": "Polymer/web-component-tester#^4.2.2"
+    "iron-component-page": "PolymerElements/iron-component-page#^1.1.7",
+    "web-component-tester": "Polymer/web-component-tester#^5.0.0"
   }
 }
